third_party/llvm-project/clang/test/Parser/missing-closing-rbrace.m
// RUN: %clang_cc1 -fsyntax-only -verify %s
// rdar: //6854840
@interface A {@end // expected-error {{'@end' appears where closing brace '}' is expected}}
